--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -48,6 +48,7 @@
     <Compile Include="General\IPlayer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TicTacToe\Players\TicTacToeHumanPlayer.cs" />
     <Compile Include="TicTacToe\Players\TicTacToeStrategyPlayer.cs" />
     <Compile Include="TicTacToe\TicTacToeBoard.cs" />
     <Compile Include="TicTacToe\TicTacToeGame.cs" />
